--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,9 @@
 .app {
-  text-align: center;
+  color: rgb(11, 71, 111);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  background: rgb(182, 226, 255);
 }
