--- a/src/Cards/DemoCard.module.css
+++ b/src/Cards/DemoCard.module.css
@@ -1,6 +1,6 @@
 .card {
     width: 500px;
-    height: 150px;
+    height: 100px;
     border: 1px solid black;
     border-radius: 5px;
     display: flex;
@@ -12,37 +12,46 @@
 }
 
 .icons {
-    width: 50px;
-    height: 50px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
+    width: 25px;
+    height: 25px;
     object-fit: contain;
     object-position: center;
 }
 
 .infoColumn {
+    padding: 0px;
+    margin: 0px;
     width: 400px;
-    height: 150px;
+    height: 100px;
     display: flex;
     flex-direction: column;
-    align-items: left;
-    justify-content: space-around;
 }
 
 .infoRow {
-    width: 400px;
-    height: clamp(50px, auto, 75px);
+    width: 350px;
+    height: 50px;
     display: flex;
     flex-direction: row;
+    align-items: top;
+    justify-content: flex-start;
+}
+
+.p1 {
+    font-size: 18px;
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+.p2 {
+    font-size: 18px;
 }
 
 .actionBox {
-    width: 40px;
-    height: 140px;
+    width: 80px;
+    height: 80px;
     padding: 10px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    align-items: top;
     justify-content: center;
-    gap: 15px;
 }
