--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,32 @@
 .app {
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  margin: 0px;
+  padding: 0px;
   color: rgb(11, 71, 111);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 15px;
   background: rgb(182, 226, 255);
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.content {
+  width: 700px;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.header {
+  width: 500px;
+  font-size: 28px;
+  font-weight: bold;
 }
