--- a/src/Update/Update.module.css
+++ b/src/Update/Update.module.css
@@ -10,5 +10,39 @@
 }
 
 .form {
+    width: 500px;
+    height: 200px;
+    border-radius: 5px;
+    background: rgb(99, 169, 239);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
 
+.label {
+    color: black;
+}
+
+.input {
+    cursor: text;
+}
+
+.buttonBox {
+    display: flex;
+    width: 147px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 5px;
+}
+
+.button {
+    cursor: pointer;
+    opacity: 0.85;
+}
+
+.button:hover {
+    opacity: 1;
 }
