--- a/src/Update/Update.module.css
+++ b/src/Update/Update.module.css
@@ -1,11 +1,12 @@
 .modal {
+    padding-top: 250px;
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 250px);
     position: absolute;
     z-index: 250;
     background: rgba(0, 0, 0, 0.75);
     display: flex;
-    align-items: center;
+    align-items: top;
     justify-content: center;
 }
 
