--- a/src/Update/Update.module.css
+++ b/src/Update/Update.module.css
@@ -10,6 +10,30 @@
     justify-content: center;
 }
 
+.exitButtonBox {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: 30px;
+    height: 25px;
+    margin-left: -30px;
+    border-radius: 5px;
+    opacity: 0.7;
+}
+
+.exitButtonBox:hover {
+    opacity: 1;
+}
+
+.exitButton {
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.exitButton:hover {
+    color: red;
+}
+
 .form {
     width: 500px;
     height: 200px;
