--- a/src/Cards/DemoCard.module.css
+++ b/src/Cards/DemoCard.module.css
@@ -1,5 +1,5 @@
 .card {
-    width: 500px;
+    width: 580px;
     height: 100px;
     border: 1px solid black;
     border-radius: 5px;
@@ -82,9 +82,9 @@
 }
 
 .actionBox {
-    width: 80px;
+    width: 100px;
     height: 80px;
-    padding: 10px 10px 0px 0px;
+    padding-top: 10px;
     display: flex;
     flex-direction: row;
     align-items: top;
