--- a/src/Create/Create.module.css
+++ b/src/Create/Create.module.css
@@ -1,16 +1,41 @@
 .form {
-
+    width: 585px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background: white;
+    border-radius: 5px;
+    border: 1px solid rgba(11, 71, 111, 0.5);
 }
 
 .label {
-
+    font-size: 40px;
+    width: 300px;
+    height: 50px;
+    color: rgb(11, 71, 111);
 }
 
 .input {
+    width: 290px;
+    height: 20px;
+    padding: 5px;
+}
 
+.buttonBox {
+    width: 300px;
+    height: 50px;
+    display: flex;
+    justify-content: flex-end;
 
 }
 
 .button {
-    
+    width: 75px;
+    height: 30px;
+    border-radius: 5px;
+    color: black;
+    font-size: 14px;
 }
+
