--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -29,3 +29,14 @@
   font-size: 32px;
   font-weight: bold;
 }
+
+.userBox {
+  display: flex;
+  width: 600px;
+  height: 50px;
+}
+
+.userInfo {
+  font-size: 24px;
+  font-weight: 600;
+}
