--- a/src/Update/Update.module.css
+++ b/src/Update/Update.module.css
@@ -31,7 +31,7 @@
 }
 
 .exitButton:hover {
-    color: red;
+    color: rgb(25, 84, 211);
 }
 
 .form {
@@ -48,6 +48,7 @@
 
 .label {
     color: black;
+    font-size: 1.25rem;
 }
 
 .input {
